--- a/style.css
+++ b/style.css
@@ -1,5 +1,230 @@
-.Record__Card{
-    padding: 9px;
+*{
+    box-sizing: border-box;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+input, button {
+    all: unset;
+  }
+
+body{
+    background-color: #100D1D;
+    padding-left: 128px;
+    padding-right: 128px;
+}
+
+section{
+    height: 100vh;
+}
+
+.CalculatorPage{
+    display: flex;
+}
+.InputsCard{
+    margin-top: 75px;
+    margin-bottom: 105px;
+    padding: 41px 38px;
     border-radius: 24px;
-    background-color: aquamarine;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    background: linear-gradient(109.21deg, rgba(97, 102, 222, 0.05) -7.04%, rgba(92, 175, 206, 0.05) 101.31%);
+}
+.InputsCard__Group{
+    display: inline-block;
+}
+
+.InputsCard__Group--Title{
+    padding-left: 12px;
+    font-size: 24px;
+    margin-bottom: 12px;
+}
+.ValueInput, .ValueInput--Filter{
+    padding-left: 24px;
+    background: rgba(16, 13, 29, 0.6);
+    border-radius: 18px;
+    width: 280px;
+    height: 75px;
+    font-size: 40px;
+}
+
+.ValueInput--Filter{
+    width: 130px;
+    margin: 0px 75px;
+    text-align: center;
+}
+
+
+
+
+.CalculationResult__Title{
+    color: #D9D9D9;
+    font-size: 24px;
+}
+.CalculationResult__Value{
+    font-weight: 500;
+    font-size: 210px;
+    background: linear-gradient(96.53deg, #6166DE 20.58%, #5CAFCE 96.44%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.Slider__Container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+ 
+    width: 716px;
+    height: 53px;
+    background: linear-gradient(96.53deg, rgba(97, 102, 222, 0.2) 20.58%, rgba(92, 175, 206, 0.2) 96.44%);
+    border-radius: 24px;
+    padding: 5px;
+}
+
+.Button__Slider{
+    justify-self: center;
+    color: rgba(217, 217, 217, 0.6);
+    background-color: transparent;
+
+}
+
+.Active{
+    background: rgba(16, 13, 29, 0.6);
+    border-radius: 18px;
+    width: 360px;
+    text-align: center;
+    color: white;
+    
+}
+
+.Button__Outlined--Gradient{
+    text-align: center;
+    color: #4C66AD;
+    width: 166px;
+    height: 47px;
+    border-radius: 48px;
+    font-size: 24px;
+    border: solid 3px transparent;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(96.53deg, #6166DE 20.58%, #5CAFCE 96.44%);  
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    box-shadow: 2px 1000px 1px #100D1D inset;
+    margin-left: 26px;
+
+}
+
+.Button__Outlined--Gradient:hover{
+    color: #8fa9f0;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(96.53deg, #8083df 20.58%, #90defa 96.44%);  
+}
+
+.Button__Link--Gradient{
+    font-weight: 500;
+    font-size: 24px;
+    background: linear-gradient(96.53deg, #6166DE 20.58%, #5CAFCE 96.44%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    cursor: pointer;
+}
+
+/* RECORDS SECTION */
+
+.RecordsTitleBar{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 48px;
+}
+.RecordsTitleBar__Item{
+    display: inline-block;
+}
+.Record__Information_Grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.Records__Container{
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+}
+
+
+.Record__Card{
+    padding: 54px;
+    width: 500px;
+    height: 415px;
+    border-radius: 24px;
+    background-color: rgba(217, 217, 217, 0.05);
+}
+
+.Record__Amount{
+    text-align: center;
+    font-weight: bold;
+    font-size: 64px;
+    margin: 0;
+    background: linear-gradient(96.53deg, #6166DE 20.58%, #5CAFCE 96.44%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.DetailValue{
+    text-align: center;
+    font-size: 32px;
+    margin: 0;
+}
+.DetailDescription{
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.CalculationResult__Title,.CalculationResult__Value,.CalculationPeriod__Slider{
+    display: flex;
+    justify-content: center;
+}
+
+
+.dropdown-menu{
+    padding: 28px;
+    border-radius: 24px;
+    color: #4C66AD;
+    border: solid 1px transparent;
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(96.53deg, #6166DE 20.58%, #5CAFCE 96.44%);  
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    box-shadow: 2px 1000px 1px #1A1727 inset;
+  
+}
+
+.CenteredContentWrapper{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.HorizontalContentWrapper{
+    display:flex;
+}
+
+.NoMargins{
+    margin: 0;
+}
+.MT-12{
+    margin-top: 12px;
+}
+.MT-24{
+    margin-top: 24px;
+}
+.MT-48{
+    margin-top: 48px;
 }
